--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "\"# API-for-Food-Search\"",
   "main": "app.js",
   "scripts": {
-    "predeploy": "npm run API-for-Food-Search ",
-    "deploy": "gh-pages -d API-for-Food-Search"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "Pushpendra Singh",
   "license": "ISC",
-  "homepage": "https://PushpendraSingh226.github.io//Recipe-Search",
+  "homepage": "https://PushpendraSingh226.github.io//API-for-Food-Search",
   "dependencies": {
     "gh-pages": "^3.2.3"
   }
